Add remote outlet project

--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,20 @@
     
 	<div class="main_content">
     <table id="projects_table">
+    
+    <!-- LightLink -->
+    <tr>
+        <td class="descr_table_entry">
+          <a class="project_title" href="projects/remote_outlet.html">Lightlink Remote Outlet</a>
+          <p class="project_description">This is a little device that essentially allows you to change the location of a switched power outlet. The idea is
+            you plug one device into the switched outlet then another into the outlet you want to control, and the device's power states are linked over a wireless connection.
+            I made this mainly because the locations of the switched outlets in my current apartment make no sense, and I still like to be able to use the light switches to control lamps.
+          </p>
+        </td>
+        <td>
+          <a href="projects/remote_outlet.html"><img class="project_image" src="projects/remote_outlet_media/lightlink_completed_enclosures.jpg"/></a>
+        </td>
+    </tr>
 
     <!-- Lab Power Supply -->
     <tr>
