--- a/index.html
+++ b/index.html
@@ -19,49 +19,12 @@
     <table class="main_table">
       <tr>
         <td id="intro_text" colspan="2">
+            Hey there, I made this site really just to document and show off some fun projects I've done throughout the years. Some of them are pretty old at this point, so don't judge me too harshly :)
+            Feel free to check out my github too which may have some more projects: <a href="https://github.com/spstack">https://github.com/spstack</a>. Thanks!
+          <p>
+            - Scott
+          </p>
         </td>
-      </tr>
-
-
-      <!-- quick link box and news feed box row -->
-      <tr>
-
-        <!--button panel -->
-        <td class="button_panel">
-			<table>
-				<tr>
-				<td>
-					<div class="link_button" id="linkedin_button" onmousedown="quickLinkDown('linkedin_button')">
-					<a href="http://www.linkedin.com/pub/scott-stack/45/6ab/997/">Linkedin Profile</a>
-					</div>
-				</td>
-				</tr>
-				<tr>
-				<td>
-					<div class="link_button" id="projects_button" onmousedown="quickLinkDown('projects_button')">
-					<a href="./projects.html">List of all Projects</a>
-					</div>
-				</td>
-				</tr>
-			</table>
-			</td>
-        
-        <!--News feed -->
-        <td class="news_feed">
-          <h2>What's New</h2>
-          <ul>
-
-        <li><span class="news_timestamp">4/19/2019 - </span><a href="projects/power_supply.html">Bench Power Supply</a> Added a page for my new custom clear-cased bench power supply!</li>
-        <li><span class="news_timestamp">7/15/2018 - </span><a href="projects/pcb_clock.html">PCB Alarm Clock</a> Added project page for my custom PCB art alarm clock!</li>
-        <li><span class="news_timestamp">2/13/2018 - </span><a href="projects/night_vision.html">Night Vision</a> Added <strong><span style="color:green">night vision</span></strong> goggles project to the projects section!</li>
-                <li><span class="news_timestamp">1/20/2018 - </span><a href="projects.html">Moar Projects!</a> Added a few more projects to the list including a motorized desk and an IR recorder. Also added a video to the internet controlled robot page. </li>
-                <li><span class="news_timestamp">5/14/2016 - </span><a href="projects/N64_mod.html">N64 Mod</a> project page added. I modded my N64 a while ago, but finally got around to putting up details on the website</li>
-              <li><span class="news_timestamp">1/11/2015 - </span><a href="projects/internet_robot.html">Mini internet controlled robot</a> project added. Tiny little robot that you can drive through the internet.</li>
-              <li><span class="news_timestamp">2/8/2014 - </span><a href="projects/home_automation.html">home automation project page</a>. My first attempt at some home automation. Includes light control, security webcam, some very basic temperature monitoring, and TV control.</li>
-        <!--<li><span class="news_timestamp">xx/xx/xxxx - </span>*Insert Entry Here*</li>-->
-          </ul>
-        </td>
-
       </tr>
     </table>
 	</div>
