Add evolution simulation project to website

--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,20 @@
     
 	<div class="main_content">
     <table id="projects_table">
+
+    <!-- Evolution Sim -->
+    <tr>
+        <td class="descr_table_entry">
+          <a class="project_title" href="projects/evolution_sim.html">Evolution Simulation Canvas</a>
+          <p class="project_description">This is a small wall mounted display that runs a simple evolution simulation that I wrote in Rust.
+            It simulates little pixel creatures that use neural network "brains" to search for food in an environment. Think it ended up looking
+            pretty neat!
+          </p>
+        </td>
+        <td>
+          <a href="projects/evolution_sim.html"><img class="project_image" src="projects/evsim_media/evsim_wall1_thumb.jpg"/></a>
+        </td>
+    </tr>
     
     <!-- LightLink -->
     <tr>
